--- a/opencv/build.gradle
+++ b/opencv/build.gradle
@@ -188,7 +188,7 @@ publishing {
     repositories {
         maven {
             name = 'myrepo'
-            url = "${project.buildDir}/repo"
+            url = "${getLayout().getBuildDirectory()}/repo"
         }
     }
 }
